--- a/contactus.html
+++ b/contactus.html
@@ -36,7 +36,7 @@
                             Topics
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Techno</a>
+                            <li><a class="dropdown-item" href="#">Technology</a>
                             </li>
                             <li><a class="dropdown-item" href="#">Web development</a></li>
                             <li>
